@@ -1,0 +1,94 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+  <!--
+  Dome Door/Window Sensor Pro
+  https://products.z-wavealliance.org/products/2399
+  https://products.z-wavealliance.org/ProductManual/File?folder=&filename=Manuals/2399/Gen%202DW%20API%20Manual%20v1.3.pdf
+  -->
+  <!-- Configuration Parameters -->
+  <CommandClass id="112">
+    <Value type="list" genre="config" index="1" label="Indicator LED" units="level" min="0" max="1" size="1" value="1">
+      <Help>
+        This parameter enables or disables the LED Indicator flashing to indicate opening and closing events.
+        The Door/Window Sensor will always flash the LED Indicator for inclusion, exclusion, tamper, and other system events.
+      </Help>
+      <Item label="Disable" value="0"/>
+      <Item label="Enable" value="1"/>
+    </Value>
+    <Value type="list" genre="config" index="2" label="Open/Close Reports Sent" units="level" min="0" max="1" size="1" value="0">
+      <Help>
+        This parameter switches the Notification or Binary Sensor report sent when the door opens or closes.
+        If this parameter is set to 01, the Door/Window Sensor will report closed instead of open when the Magnet and Sensor are pulled apart.
+      </Help>
+      <Item label="Reports Closed when Magnet is close" value="0"/>
+      <Item label="Reports Open when Magnet is close" value="1"/>
+    </Value>
+    <Value type="list" genre="config" index="3" label="Report Command Classes" units="level" min="0" max="2" size="1" value="0">
+      <Help>
+        By default, the Door/Window Sensor uses the Notification command class to communicate open/close and tamper events.
+        If this Parameter is set to 1, the device will instead use the Binary Sensor command class.
+      </Help>
+      <Item label="Notification and Binary Sensor" value="0"/>
+      <Item label="Notification" value="1"/>
+      <Item label="Binary Sensor" value="2"/>
+    </Value>
+    <Value type="list" genre="config" index="4" label="Temperature sensor" units="level" min="0" max="1" size="1" value="0">
+      <Help>
+        The Door/Window Sensor can also monitor and report ambient temperature conditions.
+        However, temperature sensing functionality is disabled by default to save battery life, and this configuration parameter is used to enable or disable this feature.
+      </Help>
+      <Item label="Disable" value="0"/>
+      <Item label="Enable" value="1"/>
+    </Value>
+    <Value type="byte" genre="config" index="5" label="Temperature Offset" value="0" min="0" max="255" size="1">
+      <Help>
+        This Configuration Parameter can offset the temperature value reported by +/- 125 degrees to compensate for temperature variances in a room - for example, the temperature near the ceiling in a room is significantly higher than the average temperature of the same room.
+        This Parameter accepts a signed 8-bit value with an absolute value of up to 125, and its units are Dependant on Configuration Parameter 07.
+        Temperature Offset.
+        0 to 125 : 0 to 125 degrees.
+        255 to 130 : -1 to -125 degrees.
+      </Help>
+    </Value>
+    <Value type="list" genre="config" index="6" label="Temperature Units" units="level" min="0" max="1" size="1" value="0">
+      <Help>The Door/Window Sensor can report temperature values in either Celsius or Fahrenheit, and this parameter allows the user to decide which unit is used.</Help>
+      <Item label="Fahrenheit" value="0"/>
+      <Item label="Celsius" value="1"/>
+    </Value>
+    <Value type="byte" genre="config" index="7" label="Group 2 Basic Set Value" value="255" min="0" max="255" size="1">
+      <Help>
+        This parameter sets the value sent by the Basic Set command to Association Group 2 (for more information, see Association Group Info.).
+        0 Turn Off Device.
+        1 to 99 Set Device to Value.
+        255 Turn On Device.
+      </Help>
+    </Value>
+    <Value type="byte" genre="config" index="8" label="Group 4 Basic Set Level Opening" value="255" min="0" max="255" size="1">
+      <Help>
+        This parameter sets the value sent by the Basic Set command to Association Group 4.
+        The Door/Window Sensor sends a Basic Set command to Association Group 4 when the door or window opens (for more information, see Association Group Info.).
+        0 Turn Off Device.
+        1 to 99 Set Device to Value.
+        255 Turn On Device.
+      </Help>
+    </Value>
+    <Value type="byte" genre="config" index="9" label="Group 4 Basic Set Level Closing" value="0" min="0" max="255" size="1">
+      <Help>
+        This parameter sets the value sent by the Basic Set command to Association Group 4.
+        The Door/Window Sensor sends a Basic Set command to Association Group 4 when the door or window opens (for more information, see Association Group Info.).
+        0 Turn Off Device.
+        1 to 99 Set Device to Value.
+        255 Turn On Device.
+      </Help>
+    </Value>
+  </CommandClass>
+  <!-- Association Groups -->
+  <CommandClass id="133">
+    <Associations num_groups="5">
+      <Group index="1" max_associations="5" label="Lifeline" />
+      <Group index="2" max_associations="5" label="Tamper Basic Set" />
+      <Group index="3" max_associations="5" label="Tamper Notification Report" />
+      <Group index="4" max_associations="5" label="Sensor Basic Set" />
+      <Group index="5" max_associations="5" label="Sensor Notification Report"/>
+    </Associations>
+  </CommandClass>
+</Product>
