@@ -318,6 +318,7 @@
 		<Product type="0003" id="0087" name="On/Off Plug-In Switch" config="dome/0087.xml"/>
 		<Product type="0003" id="0088" name="Siren" config="dome/0088.xml"/>
 		<Product type="0003" id="0101" name="Door/Window Sensor" config="dome/0101.xml"/>
+		<Product type="0003" id="0201" name="Door/Window Sensor Pro" config="dome/0201.xml"/>
 	</Manufacturer>
 	<Manufacturer id="020e" name="Domitech">
 		<Product type="4c42" id="3134" name="Smart LED Retrofit Kit ZE27EU" config="domitech/ze27eu.xml"/>
