@@ -198,7 +198,8 @@ Version 1.5
  - Issue #1309 - Fix RollerShutter Increment/Decrement in SwitchMultiLevel (Justin)
  - Add Dome On/Off Plug-In Switch (Nechry)
  - Add Tronika Touch Panel Wall Controller - ZSC-01D (Nechry)
- 
+ - Add Dome Door/Window Sensor Pro (Nechry)
+
 Version 1.4
  - Released 10th Jan, 2016
 
